--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pizza</title>
 </head>
 <body>
-    <h1>pizza Recipe</h1>
+    <h1>Pizza Recipe</h1>
     <img src="/recipes/pizza.webp" alt="">
     <h2>Description</h2>
     <h3>Ingredients</h3> 
