--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 <body>
     <h1>Odin Recipes</h1>
     <ul>    
-        <li><a href="/recipes/lasagna.html">Lasagna Recipe</a></li>
-        <li><a href="/recipes/pizza.html">Lasagna Recipe</a></li>
-        <li><a href="/recipes/egg.html">Lasagna Recipe</a></li>
+        <li><a href="./recipes/lasagna.html">Lasagna Recipe</a></li>
+        <li><a href="./recipes/pizza.html">Pizza Recipe</a></li>
+        <li><a href="./recipes/egg.html">Egg Recipe</a></li>
     </ul>
 
 
