--- a/recipes/egg.html
+++ b/recipes/egg.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Easy Egg Recipe</h1>
-    <img src="/recipes/egg.webp" alt="">
+    <img src="./recipes/egg.webp" alt="">
     <h2>Description</h2>
     <h3>Ingredients</h3> 
     <ul>
