--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Lasagna Recipe</h1>
-    <img src="/recipes/lasagna.webp" alt="">
+    <img src="./recipes/lasagna.webp" alt="">
     <h2>Description</h2>
     <h3>Ingredients</h3>
     <ul>
