--- a/recipes/pizza.html
+++ b/recipes/pizza.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <h1>Pizza Recipe</h1>
-    <img src="/recipes/pizza.webp" alt="">
+    <img src="/recipes/pizza.jpg" alt="">
     <h2>Description</h2>
     <h3>Ingredients</h3> 
     <ul>
